# GPTSwarm

./: .coveragerc  .env.template  .gitignore  .gitmodules  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements_colab.txt  requirements_py310_linux.txt
.github/workflows/: pytest.yml
config/crosswords/: agent_swarm_Ref.yaml  agent_swarm_ToT.yaml  agents_Ref.json  agents_ToT.json
config/gaia/: agent_swarm.yaml  agents.json
datasets/: README.md
datasets/MMLU/: .gitignore  download.py
datasets/demos/: agi.txt
datasets/gaia/: README.md  format.py
datasets/gaia/utils/: data_split.py  prefix_clean.py
datasets/humaneval/: humaneval-py.jsonl
diagrams/: class_diagram.drawio  swarm_adv.drawio  swarm_adv_realized.drawio  swarm_cot_io.drawio  swarm_tot_io.drawio  swarm_tot_io_color.drawio
experiments/: README.md  run_crosswords.py  run_gaia.py  run_humaneval.py  run_mmlu.py
experiments/crosswords/: evaluate.py  train.py
experiments/evaluator/: accuracy.py  evaluator.py
experiments/evaluator/datasets/: base_dataset.py  mmlu_dataset.py
notebooks/: demo_custom_agent.ipynb  demo_swarm.ipynb
swarm/environment/: __init__.py
swarm/environment/agents/: __init__.py  adversarial_agent.py  agent_registry.py  cot.py  io.py  tot.py
swarm/environment/agents/crosswords/: brute_force_opt.py  reflection.py  tot.py
swarm/environment/agents/gaia/: normal_io.py  tool_io.py  tool_tot.py  web_io.py
swarm/environment/agents/humaneval/: code_io.py  code_react.py
swarm/environment/agents/mmlu/: specialist_agent.py
swarm/environment/operations/: __init__.py  adversarial_answer.py  combine_answer.py  cot_step.py  direct_answer.py  file_analyse.py  final_decision.py  generate_query.py  operation_registry.py  optimizable_operation.py  reflect.py  specialist_answer.py  web_search.py
swarm/environment/prompt/: __init__.py  common.py  crosswords_prompt_set.py  gaia_prompt_set.py  human_eval_fewshot.py  humaneval_prompt_set.py  mmlu_prompt_set.py  plan.py  prompt_set.py  prompt_set_registry.py
swarm/graph/: __init__.py  composite_graph.py  graph.py  node.py  swarm.py  visualize.py
swarm/llm/: __init__.py  format.py  gpt4v_chat.py  gpt_chat.py  llm.py  llm_registry.py  mock_llm.py  mock_visual_llm.py  price.py  visual_llm.py  visual_llm_registry.py
swarm/memory/: __init__.py  memory.py
swarm/optimizer/edge_optimizer/: optimization.py  parameterization.py
swarm/optimizer/node_optimizer/: __init__.py  node_optimization.py  prompt_optimizer.py
swarm/utils/: common.py  const.py  globals.py  log.py
test/: DEVELOPMENT.md  LICENSE  pyproject.toml  pytest.ini  requirements_py310_macos.txt  test_run.py
test/experiments/crosswords/: test_agents.py  test_evaluator.py  test_optimizer.py
test/experiments/evaluator/: test_mmlu_evaluator.py
test/swarm/graph/: test_adversarial.py  test_swarm.py  test_visialize.py
test/swarm/llm/: test_llm_factory.py  test_visual_llm_factory.py
(+33 files in other folders)
