[project]
name = "gptswarm"
version = "0.1"
authors = [
  { name="Mingchen Zhuge", email="mczhuge@gmail.com"},
  { name="Wenyi Wang", email="wenyi.wang@kaust.edu.sa"},
  { name="Louis Kirsch"},
  { name="Francesco Faccio", email="francesco.faccio@kaust.edu.sa"},
  { name="Dmitrii Khizbullin", email="dmitrii.khizbullin@gmail.com"},
  { name="Jürgen Schmidhuber"},
]
description = "GPTSwarm: Language Agents as Optimizable Graphs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements_py310_macos.txt"]}

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/metauto-ai/GPTSwarm.git"
Issues = "https://github.com/metauto-ai/GPTSwarm/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["swarm"]
